Add details to readme
